Increase size at which close buttons on inactive tabs disappear.

This patch changes the size at which close buttons disappear from being
approximately 48 dips of content area to being a fixed constant. As a
first pass I've set the constant to 68 dips, which feels good to me.

This patch also ties the logic for when to show extra left padding to
the close button visibility, which addresses cases where the favicon
would "twitch" due to the alert indicator appearing.

Bug: 853788, 863027
Change-Id: I681f8b7d530b192f2fd5943436ae16bd93f33fba
Reviewed-on: https://chromium-review.googlesource.com/1125315
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575795}
Former-commit-id: bb53e26734e70a1f28d0d1d3fe16f2a7eaf5ca27